--- a/index.html
+++ b/index.html
@@ -7,11 +7,23 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css"
         integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
     <link rel="stylesheet" href="font/font.css">
+    <link rel="stylesheet" href="css/preloader.css">
     <link rel="stylesheet" href="css/style.css">
     <title>Веб разработка - Домашнее задание | Gregory Kadaner</title>
 </head>
 
 <body>
+    <div class="container">
+        <span class="text1">Welcome to<br></span>
+        <span class="text2">My website</span>
+        <div class="wrapper">
+            <span class="load">Lodaing</span>
+            <span class="dot1">.</span>
+            <span class="dot2">.</span>
+            <span class="dot3">.</span>
+        </div>
+
+    </div>
     <section class="sec1 h60vh">
         <div class="text-holder">
             <h1>Каданер Григорий</h1>
@@ -67,18 +79,22 @@
                     <p class="education__text mt-auto text-justify p-lg-0">
                         <span>(2008 - 2019)</span>
                         <br>
-                        <a href="https://schoolnvk.dnepredu.com/" target="_blank" class="info-links box-shadow-underlined">Детальнее &nbsp;<i class="fal fa-long-arrow-right"></i></a>
+                        <a href="https://schoolnvk.dnepredu.com/" target="_blank"
+                            class="info-links box-shadow-underlined">Детальнее &nbsp;<i
+                                class="fal fa-long-arrow-right"></i></a>
                     </p>
                 </div>
 
                 <div class="education__card pt-5vh" name="volleyball">
                     <div class="img-handler kei-img-handler">
                     </div>
-                    <h3 class="education__text__heading p-lg-0">Киевский экономический институт имени Вадима Гетьмана</h3>
+                    <h3 class="education__text__heading p-lg-0">Киевский экономический институт имени Вадима Гетьмана
+                    </h3>
                     <p class="education__text mt-auto text-justify p-lg-0">
                         <span>(2019 - <script src="js/dateNow.js"></script>, сейчас)</span>
                         <br>
-                        <a href="https://kneu.dp.ua/" target="_blank" class="info-links box-shadow-underlined">Детальнее &nbsp;<i class="fal fa-long-arrow-right"></i></a>
+                        <a href="https://kneu.dp.ua/" target="_blank" class="info-links box-shadow-underlined">Детальнее
+                            &nbsp;<i class="fal fa-long-arrow-right"></i></a>
                     </p>
                 </div>
 
@@ -91,19 +107,22 @@
             <h1 class="portfolio__job-experience heading">ОПЫТ РАБОТЫ</h1>
             <div class="job__text d-inline-flex pt-5vh">
                 <div class="text__divs">
-                    <h3>Freelance #1</h3>
+                    <h3>Freelance <span class="first">#1</span></h3>
+                    <p class="text-muted">(2017 - 2019)</p>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium at repudiandae adipisci.
                         Dolorem ipsam architecto at eaque dolore qui minima natus ipsum. Odio ratione voluptas provident
                         sed similique quae a!</p>
                 </div>
                 <div class="text__divs">
-                    <h3>IT HUB Co-working #2</h3>
+                    <h3>IT HUB Co-working <span class="second">#2</span></h3>
+                    <p class="text-muted">(2019 - 2020)</p>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium at repudiandae adipisci.
                         Dolorem ipsam architecto at eaque dolore qui minima natus ipsum. Odio ratione voluptas provident
                         sed similique quae a!</p>
                 </div>
                 <div class="text__divs">
-                    <h3>На дому #3</h3>
+                    <h3>На дому <span class="third">#3</span></h3>
+                    <p class="text-muted">(2017 - 2020)</p>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium at repudiandae adipisci.
                         Dolorem ipsam architecto at eaque dolore qui minima natus ipsum. Odio ratione voluptas provident
                         sed similique quae a!</p>
@@ -116,6 +135,7 @@
             </p>
         </div>
     </section>
+    <!-- Скрипт для отображения иконок Fontawesome -->
     <script src="https://ithub-test.ml/fontawesome/js/all.min.js"></script>
 </body>
 
