--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <div class="container">
+    <!-- <div class="container">
         <span class="text1">Welcome to<br></span>
         <span class="text2">My website</span>
         <div class="wrapper">
@@ -23,7 +23,7 @@
             <span class="dot3">.</span>
         </div>
 
-    </div>
+    </div> -->
     <section class="sec1 h60vh">
         <div class="text-holder">
             <h1>Каданер Григорий</h1>
@@ -77,10 +77,10 @@
                     </div>
                     <h3 class="education__text__heading p-lg-0">Криворожская специализированная школа - Ор Авнер</h3>
                     <p class="education__text mt-auto text-justify p-lg-0">
-                        <span>(2008 - 2019)</span>
+                        <span class="text-muted">(2008 - 2019)</span>
                         <br>
                         <a href="https://schoolnvk.dnepredu.com/" target="_blank"
-                            class="info-links box-shadow-underlined">Детальнее &nbsp;<i
+                            class="info-links">Детальнее &nbsp;<i
                                 class="fal fa-long-arrow-right"></i></a>
                     </p>
                 </div>
@@ -91,9 +91,9 @@
                     <h3 class="education__text__heading p-lg-0">Киевский экономический институт имени Вадима Гетьмана
                     </h3>
                     <p class="education__text mt-auto text-justify p-lg-0">
-                        <span>(2019 - <script src="js/dateNow.js"></script>, сейчас)</span>
+                        <span class="text-muted">(2019 - <script src="js/dateNow.js"></script>, сейчас)</span>
                         <br>
-                        <a href="https://kneu.dp.ua/" target="_blank" class="info-links box-shadow-underlined">Детальнее
+                        <a href="https://kneu.dp.ua/" target="_blank" class="info-links">Детальнее
                             &nbsp;<i class="fal fa-long-arrow-right"></i></a>
                     </p>
                 </div>
