--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="font/font.css">
     <link rel="stylesheet" href="css/preloader.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="https://ithub-coworking.com/css/owl.carousel.min.css"/>
+    <link rel="stylesheet" href="https://ithub-coworking.com/css/owl.theme.default.min.css">
+    <link rel="stylesheet" type="text/css" href="https://vasyl-pilka.ml/riznobarvna-ukrayina/fancyboxCss/jquery.fancybox.min.css">
     <title>Веб разработка - Домашнее задание | Gregory Kadaner</title>
 </head>
 
@@ -213,16 +216,103 @@
                 </div>
             </div>
         </div>
+    </section>
+    <section class="myCertificates">
+        <h2 class="myCertificates-heading">МОИ СЕРТИФИКАТЫ</h2>
+        <div class="slider-1 owl-carousel owl-theme owl-loaded owl-nav-outer owl-dot-round owl-1 owl-drag mw1280px mx-auto">
 
-        <hr class="text-slicer">
+            <div class="owl-stage-outer">
+
+                <div class="owl-stage">
+
+                    <div class="owl-item active ">
+
+                        <div class="mx-auto" style="max-width: 400px;">
+                            <div class="mx-auto">
+                                <a data-fancybox="gallery" href="images/JS.jpg">
+                                    <img alt="JavaScript certificate of achivement" src="images/JS.jpg" alt="">
+                                </a>
+                            </div>  
+                        </div>
+
+                    </div>
+
+                    <div class="owl-item ">
+
+                        <div class="mx-auto" style="max-width: 400px;">
+                            <div class="mx-auto">
+                                <a data-fancybox="gallery" href="images/HTML.jpg">
+                                    <img alt="HTML certificate of achivement" src="images/HTML.jpg" alt="">
+                                </a>
+                            </div>  
+                        </div>
+
+                    </div>
+
+                    <div class="owl-item ">
+
+                        <div class="mx-auto" style="max-width: 400px;">
+                            <div class="mx-auto">
+                                <a data-fancybox="gallery" href="images/css.jpg">
+                                    <img alt="CSS certificate of achivement" src="images/css.jpg" alt="">
+                                </a>
+                            </div>  
+                        </div>
+
+                    </div>
+
+                    <div class="owl-item ">
+
+                        <div class="mx-auto" style="max-width: 400px;">
+                            <div class="mx-auto">
+                                <a data-fancybox="gallery" href="images/Java.jpg">
+                                    <img alt="Java certificate of achivement" src="images/Java.jpg" alt="">
+                                </a>
+                            </div>  
+                        </div>
+
+                    </div>
+
+                    <div class="owl-item ">
+
+                        <div class="mx-auto" style="max-width: 400px;">
+                            <div class="mx-auto">
+                                <a data-fancybox="gallery" href="images/SQL.jpg">
+                                    <img alt="SQL certificate of achivement" src="images/SQL.jpg" alt="">
+                                </a>
+                            </div>  
+                        </div>
+
+                    </div>
+
+                    
+                </div>
+
+                <div class="owl-controls">
+                    <button class="btn" id="falseNavigationLeft"><i class="fas fa-angle-left fz35"></i></button>
+                    <button class="btn" id="falseNavigationRight"><i class="fas fa-angle-right fz35"></i></button>
+                </div>
+
+
+            </div>
+        </div>
+    </section>
+    <hr class="text-slicer">
         <div class="loading-animation mw992px mx-auto text-center">
             <p>В процессе <span class="dot1 dot">.</span><span class="dot2 dot">.</span><span class="dot3 dot">.</span>
             </p>
         </div>
-    </section>
     <!-- Скрипт для отображения иконок Fontawesome -->
-    <script src="https://ithub-test.ml/fontawesome/js/all.min.js"></script>
-    <script src="js/js.js"></script>
+    <script src="https://ithub-test.ml/fontawesome/js/all.min.js"></script>    
+    <script src="js/js.js"></script>   
+    <script src="https://ithub-coworking.com/js/jquery.min.js"></script>
+    <script src="https://ithub-coworking.com/js/owl.carousel.js"></script>    
+    <script src="https://ithub-coworking.com/js/owl.autoplay.js"></script>
+    <script src="https://ithub-coworking.com/js/highlight.js"></script> 
+    <script src="https://ithub-coworking.com/js/app.js"></script> 
+    <script src="js/slider.js"></script>
+
+    <script src="https://vasyl-pilka.ml/riznobarvna-ukrayina/js/jquery.fancybox.min.js"></script>
 </body>
 
 </html>
