--- a/index.html
+++ b/index.html
@@ -228,6 +228,18 @@
 
                </div>
             </div>
+            <div class="text__divs">
+               <div class="myProjects-text">
+                  <div class="myProjects-body">
+                     <h3>Delivery Food</h3>
+
+                  </div>
+                  <aside class="tag-container">
+                     <span>html</span><span>scss</span><span>js</span><span>AJAX</span></aside>
+                  <p>Посмотреть!</p>
+
+               </div>
+            </div>
          </div>
       </div>
    </section>
