--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
             <div class="text__divs">
                <div class="myProjects-text">
                   <div class="myProjects-body">
-                     <h3>Delivery Food <small>test</small></h3>
+                     <h3>Delivery Food <small class="template">шаблон</small></h3>
 
                   </div>
                   <aside class="tag-container">
