--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
    <title>Веб разработка - Домашнее задание | Gregory Kadaner</title>
 </head>
 
-<body>
+<body oncontextmenu="return false;">
    <!-- <div class="container">
         <span class="text1">Welcome to<br></span>
         <span class="text2">My website</span>
@@ -407,6 +407,27 @@
          &copy; Gregory-Web <script src="js/dateNow.js"></script> | Designed up by Gregory Kadaner
       </div>
    </footer>
+
+   <script>  
+      document.onkeypress = function (event) {  
+         event = (event || window.event);  
+         if (event.keyCode == 123) {  
+            return false;  
+         }  
+         }  
+         document.onmousedown = function (event) {  
+         event = (event || window.event);  
+         if (event.keyCode == 123) {  
+            return false;  
+         }  
+         }  
+         document.onkeydown = function (event) {  
+         event = (event || window.event);  
+         if (event.keyCode == 123) {  
+            return false;  
+         }  
+      }  
+      </script>
    
    <!-- Скрипт для отображения иконок Fontawesome -->
    <script src="https://ithub-test.ml/fontawesome/js/all.min.js"></script>
