--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 
 <body oncontextmenu="return false;">
-   <!-- <div class="container">
+   <div class="container">
         <span class="text1">Welcome to<br></span>
         <span class="text2">My website</span>
         <div class="wrapper">
@@ -29,7 +29,7 @@
             <span class="dot3">.</span>
         </div>
 
-    </div> -->
+    </div>
    <section class="sec1 h60vh">
       <div class="text-holder">
          <h1>Каданер Григорий</h1>
