--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
    <title>Веб разработка - Домашнее задание | Gregory Kadaner</title>
 </head>
 
-<body oncontextmenu="return false;">
-   <div class="container">
+<body oncontextmenu="showToast();return false;">
+   <!-- <div class="container">
         <span class="text1">Welcome to<br></span>
         <span class="text2">My website</span>
         <div class="wrapper">
@@ -29,6 +29,15 @@
             <span class="dot3">.</span>
         </div>
 
+    </div> -->
+    <div class="warnings">
+       <div class="info-panel">
+          <button><i class="fal fa-times"></i></button>
+          <h3>Сообщения</h3>
+       </div>
+       <div class="chat">
+          
+       </div>
     </div>
    <section class="sec1 h60vh">
       <div class="text-holder">
@@ -41,28 +50,28 @@
       <div class="hobby mw992px mx-auto pt-5vh">
          <h1 class="portfolio__hobby heading">ХОББИ И ИНТЕРЕСЫ</h1>
          <div class="hobby__text d-inline-flex justify-space-around justify-sm-center align-items-center">
-            <div class="hobby" name="volleyball">
+            <div class="hobby">
                <div class="svg-handler">
                   <i class="fas fa-volleyball-ball"></i>
                </div>
                <p>Волейболл</p>
             </div>
 
-            <div class="hobby" name="table-tennis">
+            <div class="hobby">
                <div class="svg-handler">
                   <i class="fas fa-table-tennis"></i>
                </div>
                <p>Теннис</p>
             </div>
 
-            <div class="hobby" name="basketball">
+            <div class="hobby">
                <div class="svg-handler">
                   <i class="fas fa-basketball-ball"></i>
                </div>
                <p>Баскетболл</p>
             </div>
 
-            <div class="hobby" name="piano">
+            <div class="hobby">
                <div class="svg-handler">
                   <i class="fas fa-piano-keyboard"></i>
                </div>
