--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
    <link rel="stylesheet" href="https://ithub-coworking.com/css/owl.theme.default.min.css">
    <link rel="stylesheet" type="text/css"
       href="https://vasyl-pilka.ml/riznobarvna-ukrayina/fancyboxCss/jquery.fancybox.min.css">
-   <title>Веб разработка - Домашнее задание | Gregory Kadaner</title>
+   <title>Веб разработка</title>
 </head>
 
 <body oncontextmenu="showToast();return false;">
